refactor: remove useless code & replace Chinese with English

--- a/MyDiscord/src/Views/Sign/sign.css
+++ b/MyDiscord/src/Views/Sign/sign.css
@@ -12,9 +12,9 @@
 }
 
 a {
-  display: block;
+  /* display: block; */
   margin-top: 20px;
-  text-align: center;
+  /* text-align: center; */
   color: #1890ff;
   text-decoration: none;
 }
